2004-01-23  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/libnrtype/nr-glyphs.c (nr_pgl_free): Fixed memory leak

2004-01-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-compose.c (nr_R8G8B8A8_P_R8G8B8A8_P_A8_RGBA32): Added
	missing parentheses, thanks to davej

	* src/sp-gradient.c (sp_stop_write): Fixed &/&& bug,
	thanks to davej

2004-01-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-pathops.c (nr_node_path_rewind): Works

	* src/verbs.h: Added boolean verbs

	* src/interface.c (sp_ui_selection_menu): Added booleans to menu

	* src/path-chemistry.c (sp_selected_path_uncross): Added
	union, intersection and subtraction operations

2004-01-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/path-chemistry.c (sp_selected_path_uncross): New method

	* src/interface.c (sp_ui_selection_menu): Added uncross

	* src/verbs.c: Added SP_VERB_SELECTION_UNCROSS

	* src/verbs.h: Added SP_VERB_SELECTION_UNCROSS

	* src/libnr/nr-pathops.c: Working uncross code

	* src/libnr/nr-pathops.h: Working uncross code

2004-01-18  Changwoo Ryu  <cwryu@debian.org>

	* configure.in: Added "ko" to ALL_LINGUAS.

2004-01-11  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* glade/icons.svg: Added two new icon images for xml:space UI

	* src/dialogs/text-edit.c (sp_text_edit_dialog): xml:space UI for
	text object
	(sp_text_edit_dialog_update_object): xml:space support
	(sp_text_edit_dialog_read_selection): xml:space UI update code

2004-01-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Added "fi" to ALL_LINGUAS, thanks to Jaakko H Kyro

2004-01-11  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/text-context.c (sp_text_context_selection_changed): Previous
	fix was not so good, i.e., empty text was remained.
	
	* src/selection-chemistry.c (sp_selection_delete): So I modified
	this method instead

	* src/sp-text.c (ucs2_concat_ws): New function
	(sp_text_insert): Better text insertion. This change should also
	fix space insertion bug reported by Lynn Kerby
